--- a/package.json
+++ b/package.json
@@ -5,7 +5,16 @@
   "scripts": {
     "test": "jest",
     "start": "node backend/index.js",
-    "dev": "node backend/index.js"
+    "dev": "node backend/index.js",
+    "pm2:start": "pm2 start ecosystem.config.js",
+    "pm2:stop": "pm2 stop ecosystem.config.js",
+    "pm2:restart": "pm2 restart ecosystem.config.js",
+    "pm2:reload": "pm2 reload ecosystem.config.js",
+    "pm2:delete": "pm2 delete ecosystem.config.js",
+    "pm2:logs": "pm2 logs",
+    "pm2:status": "pm2 status",
+    "pm2:monit": "pm2 monit",
+    "dev:all": "pm2 start ecosystem.config.js && pm2 logs"
   },
   "keywords": [],
   "author": "",
