Fix environment variable loading - ensure .env from root directory works for both frontend and backend

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "test": "jest",
     "start": "node backend/index.js",
     "dev": "node backend/index.js",
+    "start:all": "node start.js",
     "pm2:start": "pm2 start ecosystem.config.js",
     "pm2:stop": "pm2 stop ecosystem.config.js",
     "pm2:restart": "pm2 restart ecosystem.config.js",
@@ -14,7 +15,9 @@
     "pm2:logs": "pm2 logs",
     "pm2:status": "pm2 status",
     "pm2:monit": "pm2 monit",
-    "dev:all": "pm2 start ecosystem.config.js && pm2 logs"
+    "dev:all": "npm run start:all && pm2 logs",
+    "setup": "node -e \"console.log('Setting up environment...'); require('dotenv').config({ path: require('path').join(__dirname, '.env') }); console.log('Environment loaded successfully');\"",
+    "check-env": "node check-env.js"
   },
   "keywords": [],
   "author": "",
