--- a/package.json
+++ b/package.json
@@ -31,15 +31,19 @@
     "axios": "^1.10.0",
     "bcryptjs": "^2.4.3",
     "canvas": "^3.1.2",
+    "chart.js": "^4.5.0",
     "cors": "^2.8.5",
-    "dotenv": "^17.0.1",
+    "dotenv": "^17.2.0",
     "express": "^4.21.2",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "leaflet": "^1.9.4",
     "nodemailer": "^6.9.7",
     "pg": "^8.16.3",
+    "react-chartjs-2": "^5.3.0",
+    "react-leaflet": "^5.0.0",
     "resend": "^2.1.0",
     "twilio": "^4.19.0",
     "uuid": "^9.0.1",
