--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "nodemailer": "^6.9.7",
+    "openai": "^5.11.0",
     "pg": "^8.16.3",
     "react-chartjs-2": "^5.3.0",
     "react-leaflet": "^5.0.0",
