--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "dependencies": {
     "axios": "^1.10.0",
+    "firebase": "^12.2.1",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
