--- a/package.json
+++ b/package.json
@@ -39,15 +39,14 @@
     "express-fileupload": "^1.5.2",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
+    "firebase-admin": "^13.5.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
-    "nodemailer": "^6.9.7",
     "openai": "^5.11.0",
     "pg": "^8.16.3",
     "react-chartjs-2": "^5.3.0",
     "react-leaflet": "^5.0.0",
-    "resend": "^2.1.0",
     "twilio": "^4.19.0",
     "uuid": "^9.0.1",
     "validator": "^13.11.0"
